index/static/style.css
/* ... */
.charts h1,
.charts h2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.charts h1 {
  font-size: 16px;
  height: 20px;
  margin-bottom: 4px;
}
.charts h2 {
  margin-bottom: 0;
  font-size: 14px;
  height: 16px;
}

/* LAST PLAYED */
.previous img {
  float: left;
  margin-right: 5px;
}
.previous .result-length {
  position: absolute;
  font-size: 1em;
  font-weight: 400;
  top: 15px;
  left: 15px;
  color: #fff;
  padding: 0 4px;
  background: rgba(0, 0, 0, .5);
}
.previous h1,
.previous h2 {
  margin-bottom: 4px;
  overflow: hidden;
}
.previous h1 {
  font-size: 16px;
  height: 20px;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.previous h2 {
  height: 32px;
  font-size: 14px;
}

/* SEARCH RESULTS */
.view-collapse {
  padding: 10px 0 0 10px;
}
.view-collapse a {
  color: unset;
}
.view-collapse .dope-result {
  padding: 0 10px 0 0;
}
.view-collapse img {
  margin-bottom: 10px;
}
.view-collapse img:hover {
  -webkit-transform: scale(1.02);
  -ms-transform: scale(1.02);
  transform: scale(1.02);
}
.view-collapse h1,
.view-collapse h2 {
  font-size: 14px;
  margin-bottom: 10px;
  overflow: hidden;
  height: 32px;
}
.view-collapse ul {
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 0;
  padding-left: 0;
  list-style: none;
}
.view-collapse ul li {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 22px;
  margin-bottom: 20px;
}
.view-collapse ul li a {
  border-bottom: 2px solid rgba(0, 191, 165, 0);
}
.view-collapse ul li a:hover {
  border-bottom: 2px solid rgb(0, 191, 165);
}

/* SUBSCRIPTIONS */
.selectable.selected .select {
  background: rgb(0, 191, 165);
  color: #fff;
}

/* SETTINGS */
.settings-collapse {
  padding: 10px;
}

/* PLAYER */
#player {
  padding: 0;
  z-index: 3000;
}
#player:not(.fixed-bottom) {
  position: relative;
}
#player > div > div {
  min-height: 0;
}
#player-wrapper {
  font-weight: 600;
  color: rgb(46, 46, 46);
  position: absolute;
  overflow: hidden;
  bottom: 0;
  right: 0;
  width: 100%;
  padding: 10px;
  border-radius: .25rem .25rem 0 0;
  box-shadow: rgba(0,0,0,.5) 0 0 5px;
}
#player-wrapper img {
  float: left;
  margin-right: 5px;
  border-radius: .25rem;
  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
}
#player-wrapper h1 {
  overflow: hidden;
  margin: 10px 0;
  font-size: 16px;
  white-space: nowrap;
}
#player-wrapper h1 span {
  color: rgb(46, 46, 46);
}
.no-touch #player-wrapper h1 span:hover {
  color: #fff;
}
#player-close-collapse {
  text-align: center;
  padding-bottom: 15px;
}
#player-close-collapse p {
  display: inline-block;
  font-size: 14px;
  color: #fff;
  margin: 0 10px 0 0;
}
.player-episode {
  font-size: 14px;
  height: 40px;
  overflow: hidden;
  margin: 0 0 5px;
}
.player-date {
  margin: 0 0 10px;
  font-size: 12px;
}
#player-wrapper .player-description {
  margin: 0;
  max-height: calc(100vh - 460px);
  overflow-y: auto;
}
#player-wrapper.minimize {
  height: 50px;
}
#player-wrapper audio {
  display: block;
  width: calc(100% - 40px);
}

/* OVERRIDER */
.noborder {
  border-bottom: none;
}

/* LOADERS */
#loaders {
  display: none;
}
.circle-loading {
  position: relative;
  border-radius: 50%;
  font-size: 40px;
  font-weight: 600;
  height: 80px;
  width: 80px;
  margin: auto;
  margin-top: 20px;
  margin-bottom: 20px;
  animation: spin 1.5s ease-in-out .25s infinite;
  -webkit-animation: spin 1.5s ease-in-out .25s infinite;
}
.circle-loading .char {
  left: 27px;
  top: -19px;
  position: absolute;
  width: 24px;
  transform-origin: bottom center;
}
.char-2 {
  -webkit-transform: rotate(60deg);
  -ms-transform: rotate(60deg);
  transform: rotate(60deg);
}
.char-3 {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}
.char-4 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}
.char-5 {
  -webkit-transform: rotate(240deg);
  -ms-transform: rotate(240deg);
  transform: rotate(240deg);
}
.char-6 {
  -webkit-transform: rotate(300deg);
  -ms-transform: rotate(300deg);
  transform: rotate(300deg);
}
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(-360deg);
  }
}
@keyframes spin {
  0% {
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -ms-transform: rotate(-360deg);
    transform: rotate(-360deg);
  }
}
.button-loading {
  position: relative;
  width: 63px;
  height: 26px;
}
.loading-a-1 {
  left: 3px;
  animation: fade 2s ease-in .45s infinite;
  -webkit-animation: fade 2s ease-in .45s infinite;
}
.loading-a-2 {
  left: 11px;
  animation: fade 2s ease-in .3s infinite;
  -webkit-animation: fade 2s ease-in .3s infinite;
}
.loading-a-3 {
  left: 19px;
  animation: fade 2s ease-in .15s infinite;
  -webkit-animation: fade 2s ease-in .15s infinite;
}
.loading-a-4 {
  left: 27px;
  animation: fade 2s ease-in infinite;
  -webkit-animation: fade 2s ease-in infinite;
}
.loading-a-5 {
  left: 35px;
  animation: fade 2s ease-in .15s infinite;
  -webkit-animation: fade 2s ease-in .15s infinite;
}
.loading-a-6 {
  left: 43px;
  animation: fade 2s ease-in .3s infinite;
  -webkit-animation: fade 2s ease-in .3s infinite;
}
.loading-a-7 {
  left: 51px;
  animation: fade 2s ease-in .45s infinite;
  -webkit-animation: fade 2s ease-in .45s infinite;
}
.loading-b-1 {
  left: 3px;
  animation: fade 2s ease-in 1.45s infinite;
  -webkit-animation: fade 2s ease-in 1.45s infinite;
}
.loading-b-2 {
  left: 11px;
  animation: fade 2s ease-in 1.3s infinite;
  -webkit-animation: fade 2s ease-in 1.3s infinite;
}
.loading-b-3 {
  left: 19px;
  animation: fade 2s ease-in 1.15s infinite;
  -webkit-animation: fade 2s ease-in 1.15s infinite;
}
.loading-b-4 {
  left: 27px;
  animation: fade 2s ease-in 1s infinite;
  -webkit-animation: fade 2s ease-in 1s infinite;
}
.loading-b-5 {
  left: 35px;
  animation: fade 2s ease-in 1.15s infinite;
  -webkit-animation: fade 2s ease-in 1.15s infinite;
}
/* ... */

